src/test/ui/try-on-option.stderr
error[E0277]: the trait bound `(): From<result::sadness::PleaseCallTheOkOrMethodToUseQuestionMarkOnOptionsInAMethodThatReturnsResult>` is not satisfied
  --> $DIR/try-on-option.rs:7:5
   |
LL |     x?;
   |     ^^ the trait `From<result::sadness::PleaseCallTheOkOrMethodToUseQuestionMarkOnOptionsInAMethodThatReturnsResult>` is not implemented for `()`
   |
   = note: required because of the requirements on the impl of `Try2021<Option<!>>` for `std::result::Result<u32, ()>`
   = note: required by `from_holder`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `Try2021`)
  --> $DIR/try-on-option.rs:13:5
   |
LL | / fn bar() -> u32 {
LL | |     let x: Option<u32> = None;
LL | |     x?;
   | |     ^^ cannot use the `?` operator in a function that returns `u32`
LL | |     22
LL | | }
   | |_- this function should return `Result` or `Option` to accept `?`
   |
   = help: the trait `Try2021<Option<!>>` is not implemented for `u32`
   = note: required by `from_holder`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
